# slabes

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  description.md  prep_exec.sh  pyproject.toml  symfile.txt
requirements/: basic.txt
slabes/: __init__.py  __main__.py  ast_nodes.py  codegen.py  errors.py  eval.py  generate_parser.py  int_to_base.py  lexer.py  location.py  main.py  name_table.py  parser_base.py  py.typed  slabes.gram  slabes.peg  slabes_parser.py  slabes_template.c  types.py
slabes/libslabes/: console_display.c  raylib_display.c  shared_load.h  slabes.c  slabes.h  slabes_console.c  slabes_raylib.c
slabes/pegen/: parser.py
tests/compile/: all.slb  fibonacci_iter.slb  fibonacci_recur.slb  ints.slb  maze_solver.slb  robot.slb
tests/parser/: basic.slb  bug_weird.slb  bug_weird2.slb  error.slb  missing_comma.slb
